--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "tsc && vite build"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "typescript": "^5.4.5",
     "vite": "^5.2.10"
   }
