--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,7 @@
     "enabled": true,
     "formatWithErrors": false,
     "ignore": [],
-    "indentSize": 2,
+    "indentWidth": 2,
     "indentStyle": "space",
     "lineWidth": 80
   }
