--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "files": ["dist", "index.d.ts"],
+  "files": [
+    "dist",
+    "index.d.ts"
+  ],
   "main": "./dist/counter.umd.cjs",
   "module": "./dist/counter.js",
   "types": "./index.d.ts",
@@ -18,7 +21,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.10"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
