[add] format command

--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "files": [
-    "dist",
-    "index.d.ts"
-  ],
+  "files": ["dist", "index.d.ts"],
   "main": "./dist/counter.umd.cjs",
   "module": "./dist/counter.js",
   "types": "./index.d.ts",
@@ -17,7 +14,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "format": "biome format --write ."
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
